--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -79,200 +79,200 @@ if we are our experiences then we are both sides of them.
 	$( '#mainpanel' ).hide();
 	$.yote.init();
 	var root = $.yote.fetch_root();
-	var cron = root.cron();
 
-        $.yote.util.register_items( {
-	    root     : root,
-            cron     : cron,
-	    app_cols : [ 'x', //due to hash key..have to find a better solution TODO
-			 { render:function(app){ return app.count('_account_roots'); } },
-			 {
-			     render:function(app) {
-				 return '<button type="button" id="reset_b_' + app.id + '">Reset</button>';
+	var cron;
+
+	function register_items() {
+            $.yote.util.register_items( {
+		root     : root,
+		cron     : cron,
+		app_cols : [ 'x', //due to hash key..have to find a better solution TODO
+			     { render:function(app){ return app.count('_account_roots'); } },
+			     {
+				 render:function(app) {
+				     return '<button type="button" id="reset_b_' + app.id + '">Reset</button>';
+				 },
+				 after_render:function(app,name) {
+				     $( '#reset_b_' + app.id ).click(function() {
+					 if( confirm( "This will remove all user accounts and app data. Are you sure?" ) ) {
+					     root.purge_app( name,
+							     function() {  },
+							     function( err ) { alert( err ); }
+							   );
+					 }
+				     } );
+				 }
+			     } ], //app_cols
+		user_cols : ['x', //due to hash key..have to find a better solution TODO
+			     { //email
+				 render:function(l,h){
+				     var em=l.get('email');
+				     return em?em:'n/a';
+				 },
+				 after_render:function(app){}
 			     },
-			     after_render:function(app,name) {
-					$( '#reset_b_' + app.id ).click(function() {
-					    if( confirm( "This will remove all user accounts and app data. Are you sure?" ) ) {
-						alert( name );
-						root.purge_app( name,
-								function() { alert( "App '" + name + "' purged" ); },
-								function( err ) { alert( err ); }
-							      );
-					    }
-					} );
-			     }
-			 } ], //app_cols
-            user_cols : ['x', //due to hash key..have to find a better solution TODO
-			{ //email
-			    render:function(l,h){
-				var em=l.get('email');
-				return em?em:'n/a';
-			    },
-			    after_render:function(app){}
-			},
-			{ //is root
-			    render:function(l,h){
-				if(l.is_master_root()){
-				    return 'master root';
-				}
-				return '<input type="checkbox" id="lr_'+l.id+'" '+
-				    (l.is_root()*1==1?' checked':'')+'>';
-			    },
-			    after_render:function(l,h){
-				if(!l.is_master_root()){
-				    (function(li) {
-					$('#lr_'+li.id).click(
-					    function(){
-						if($('#lr_'+li.id).is(':checked')){
-						    if($('#lr_'+li.id).is(':checked')){
-							root.make_root(li);
-						    } else {
-							root.remove_root( li, function(){}, function(err) { alert(err)} );
-						    }
-						}
-					    }
-					);
-				    } )( l );
-				}
-			    }
-			} ], //user_cols
-	    cron_cols : [ '*name',
-			  $.yote.util.check_edit( 'enabled', undefined, undefined, undefined,
-						  function(val,item) {
-						      cron.update_entry( entry );
-						      cron_ct.refresh();
-						  } ),
-			  '*notes',
-			  '*script',
-			  {
-			      render : function( entry ) {
-				  if( entry.get( 'next_time' ) > 0 )
-				      return '<nobr>' +  $.yote.util.format_date( new Date( 60 * 1000 * entry.get( 'next_time' ) ), "h:m Y-M-D" ) + '</nobr>';
-				  else
-				      return "Not Scheduled";
-			      },
-			      after_render : function( entry ) {
-				  $( '#recalc_' + entry.id ).click( function() {
-				      cron.update_entry( entry );
-				  } );
-			      }
-			  },
-			  {
-			      render : function( entry ) {
-				  return '<div id="cron_rep_' + entry.id + '"></div><div id="cron_rep_new_' + entry.id + '"></div>';
-				  //repeat
-			      },
-			      after_render : function( entry ) {
-				  var rep_ct = $.yote.util.control_table( {
-				      attachpoint : '#cron_rep_' + entry.id,
-				      show_count : false,
-				      plimit : 100,
-				      item : entry,
-				      container_name : 'repeats',
-				      new_button : 'Add',
-				      include_remove : true,
-				      column_headers : [ 'Interval (mins)', 'Infinite Repeat', 'Repeats' ],
-				      columns : [
-					  $.yote.util.col_edit( 'repeat_interval', null, function( val, item ) {
-					      item.set( 'repeat_interval', val );
-					      cron.update_entry( entry );
-					      cron_ct.refresh();
-					  } ),
-					  $.yote.util.check_edit( 'repeat_infinite', undefined, undefined, undefined,
-								  function(val,item) {
-								      cron.update_entry( entry );
-								      cron_ct.refresh();
-								  } ),
-					  $.yote.util.col_edit( 'repeat_times', null, function( val, item ) {
-					      item.set( 'repeat_times', val );
-					      cron.update_entry( entry );
-					      cron_ct.refresh();
-					  } )
-				      ],
-				      new_attachpoint : '#cron_rep_new_' + entry.id,
-				      new_column_titles : [
-					  'interval (min)',
-					  'infinite repeat',
-					  'times'
-				      ],
-				      new_required_by_function : function( txts ) {
-					  return $( txts[ 0 ] ).val().match( /\S/ ) != null && ( $( txts[ 1 ] ).is( ':checked' ) ||
-												 $( txts[ 2 ] ).val().match( /\S/ ) != null );
-				      },
-				      new_columns : [
-					  'repeat_interval',
-					  {
-					      field : 'repeat_infinite',
-					      render : function( cid ) {
-						  return '<input type="checkbox" id="' + cid + '">';
-					      },
-					      on_create : function( item, id ) {
-						  item.set( 'repeat_infinite', $( '#' + id ).val() );
-					      }
-					  },
-					  'repeat_times'
-				      ],
-				      after_new_function : function( newitem ) {
+			     { //is root
+				 render:function(l,h){
+				     if(l.is_master_root()){
+					 return 'master root';
+				     }
+				     return '<input type="checkbox" id="lr_'+l.id+'" '+
+					 (l.is_root()*1==1?' checked':'')+'>';
+				 },
+				 after_render:function(l,h){
+				     if(!l.is_master_root()){
+					 (function(li) {
+					     $('#lr_'+li.id).click(
+						 function(){
+						     if($('#lr_'+li.id).is(':checked')){
+							 if($('#lr_'+li.id).is(':checked')){
+							     root.make_root(li);
+							 } else {
+							     root.remove_root( li, function(){}, function(err) { alert(err)} );
+							 }
+						     }
+						 }
+					     );
+					 } )( l );
+				     }
+				 }
+			     } ], //user_cols
+		cron_cols : [ '*name',
+			      $.yote.util.check_edit( 'enabled', undefined, undefined, undefined,
+						      function(val,item) {
+							  cron.update_entry( entry );
+							  cron_ct.refresh();
+						      } ),
+			      '*notes',
+			      '*script',
+			      {
+				  render : function( entry ) {
+				      if( entry.get( 'next_time' ) > 0 )
+					  return '<nobr>' +  $.yote.util.format_date( new Date( 60 * 1000 * entry.get( 'next_time' ) ), "h:m Y-M-D" ) + '</nobr>';
+				      else
+					  return "Not Scheduled";
+				  },
+				  after_render : function( entry ) {
+				      $( '#recalc_' + entry.id ).click( function() {
 					  cron.update_entry( entry );
-					  cron_ct.refresh();
-				      }
-				  } );
-			      }
-			  },
-			  {
-			      render : function( entry ) {
-				  return '<div id="cron_sched_' + entry.id + '"></div><div id="cron_sched_new_' + entry.id + '"></div>';
+				      } );
+				  }
 			      },
-			      after_render : function( entry ) {
-				  var ct = $.yote.util.control_table( {
-				      attachpoint : '#cron_sched_' + entry.id,
-				      show_count : false,
-				      plimit : 100,
-				      item : entry,
-				      container_name : 'scheduled_times',
-				      include_remove : true,
-				      column_headers : [ 'Scheduled Time' ],
-				      columns : [
-					  { render : function( txt ) { return $.yote.util.format_date( new Date( 60000 * txt ), "h:m Y-M-D" ) } }
-				      ],
-				      new_button : 'Add',
-				      new_attachpoint : '#cron_sched_new_' + entry.id,
-				      new_column_titles : [ 'when' ],
-				      remove_function : function( str, idx ) {
-					  entry.list_delete( { name : 'scheduled_times', index : idx } );
-					  cron.update_entry( entry );
-					  cron_ct.refresh();
-				      },
-				      new_function : function() {
-					  return $( '#cron_new_rep_at' ).val();
-				      },
-				      after_new_function : function( it ) {
-					  cron.update_entry( entry );
-					  cron_ct.refresh();
-				      },
-				      new_columns : [
-					  {
-					      field : 'scheduled_time_' + $.yote.util.next_id(),
-					      on_create : function( str, id ) {
-						  var do_when = new Date( $( '#' + id ).val() );
-						  entry.add_to( { name : 'scheduled_times', items : [ do_when.valueOf()/60000 ] } );
+			      {
+				  render : function( entry ) {
+				      return '<div id="cron_rep_' + entry.id + '"></div><div id="cron_rep_new_' + entry.id + '"></div>';
+				      //repeat
+				  },
+				  after_render : function( entry ) {
+				      var rep_ct = $.yote.util.control_table( {
+					  attachpoint : '#cron_rep_' + entry.id,
+					  show_count : false,
+					  plimit : 100,
+					  item : entry,
+					  container_name : 'repeats',
+					  new_button : 'Add',
+					  include_remove : true,
+					  column_headers : [ 'Interval (mins)', 'Infinite Repeat', 'Repeats' ],
+					  columns : [
+					      $.yote.util.col_edit( 'repeat_interval', null, function( val, item ) {
+						  item.set( 'repeat_interval', val );
 						  cron.update_entry( entry );
 						  cron_ct.refresh();
+					      } ),
+					      $.yote.util.check_edit( 'repeat_infinite', undefined, undefined, undefined,
+								      function(val,item) {
+									  cron.update_entry( entry );
+									  cron_ct.refresh();
+								      } ),
+					      $.yote.util.col_edit( 'repeat_times', null, function( val, item ) {
+						  item.set( 'repeat_times', val );
+						  cron.update_entry( entry );
+						  cron_ct.refresh();
+					      } )
+					  ],
+					  new_attachpoint : '#cron_rep_new_' + entry.id,
+					  new_column_titles : [
+					      'interval (min)',
+					      'infinite repeat',
+					      'times'
+					  ],
+					  new_required_by_function : function( txts ) {
+					      return $( txts[ 0 ] ).val().match( /\S/ ) != null && ( $( txts[ 1 ] ).is( ':checked' ) ||
+												     $( txts[ 2 ] ).val().match( /\S/ ) != null );
+					  },
+					  new_columns : [
+					      'repeat_interval',
+					      {
+						  field : 'repeat_infinite',
+						  render : function( cid ) {
+						      return '<input type="checkbox" id="' + cid + '">';
+						  },
+						  on_create : function( item, id ) {
+						      item.set( 'repeat_infinite', $( '#' + id ).val() );
+						  }
 					      },
-					      render : function( id ) {
-						  return '<input type="datetime-local" id="' + id + '">';
-					      }
+					      'repeat_times'
+					  ],
+					  after_new_function : function( newitem ) {
+					      cron.update_entry( entry );
+					      cron_ct.refresh();
 					  }
-				      ]
-				  } );
-				  //schedule
-			      }
-			  },
-			] //cron_cols
+				      } );
+				  }
+			      },
+			      {
+				  render : function( entry ) {
+				      return '<div id="cron_sched_' + entry.id + '"></div><div id="cron_sched_new_' + entry.id + '"></div>';
+				  },
+				  after_render : function( entry ) {
+				      var ct = $.yote.util.control_table( {
+					  attachpoint : '#cron_sched_' + entry.id,
+					  show_count : false,
+					  plimit : 100,
+					  item : entry,
+					  container_name : 'scheduled_times',
+					  include_remove : true,
+					  column_headers : [ 'Scheduled Time' ],
+					  columns : [
+					      { render : function( txt ) { return $.yote.util.format_date( new Date( 60000 * txt ), "h:m Y-M-D" ) } }
+					  ],
+					  new_button : 'Add',
+					  new_attachpoint : '#cron_sched_new_' + entry.id,
+					  new_column_titles : [ 'when' ],
+					  remove_function : function( str, idx ) {
+					      entry.list_delete( { name : 'scheduled_times', index : idx } );
+					      cron.update_entry( entry );
+					      cron_ct.refresh();
+					  },
+					  new_function : function() {
+					      return $( '#cron_new_rep_at' ).val();
+					  },
+					  after_new_function : function( it ) {
+					      cron.update_entry( entry );
+					      cron_ct.refresh();
+					  },
+					  new_columns : [
+					      {
+						  field : 'scheduled_time_' + $.yote.util.next_id(),
+						  on_create : function( str, id ) {
+						      var do_when = new Date( $( '#' + id ).val() );
+						      entry.add_to( { name : 'scheduled_times', items : [ do_when.valueOf()/60000 ] } );
+						      cron.update_entry( entry );
+						      cron_ct.refresh();
+						  },
+						  render : function( id ) {
+						      return '<input type="datetime-local" id="' + id + '">';
+						  }
+					      }
+					  ]
+				      } );
+				      //schedule
+				  }
+			      },
+			    ] //cron_cols
 
-	} ); //register_items
-
-	$.yote.util.init_ui();
+	    } );
+	} //register_items
 
 	$( 'button.sidenav' ).each( function( idx, domEl ) {
 	    $(this).click(function(){
@@ -295,10 +295,14 @@ if we are our experiences then we are both sides of them.
 	    if( $.yote.is_root() ) {
 		$( '#errpanel' ).hide();
 		$( '#mainpanel' ).show();
+		cron = root.cron();
+		register_items();
+		$.yote.util.init_ui();
 	    }
 	    else {
 		$( '#errpanel' ).show();
 		$( '#mainpanel' ).hide();
+		$.yote.util.init_ui();
  	    }
 	}
     });
