--- a/MadYote/html/index.html
+++ b/MadYote/html/index.html
@@ -46,30 +46,35 @@
 		  var yote_app = $.yote.fetch_app( 'MadYote' );
 		  var root = $.yote.fetch_root();
 		  var box = yote_app.get_suggestion_box();
+		  var pagename = 'index.html';
+		  var page = yote_app.hash_fetch( { name : 'pages', key : pagename } );
+		  var blog = yote_app.get_yote_blog();
+		  
+		  if( $.yote.is_root() && ! page ) {
+		      page = yote_app.hash( { name : 'pages',  
+					      key : pagename, 
+					      value : $.yote.fetch_root().new_root_obj() } );
+		  }
+
 		  $.yote.util.register_items( { 
 		      box  : box,
 		      chat : yote_app.get_chat(),
+		      page : page,
+		      blog : blog
 		  } );
 
-		  $.yote.util.reset_els( [ '#chat_box', '#suggestion_box_admin' ] );
+		  //$.yote.util.reset_els( [ '#chat_box', '#suggestion_box_admin', '#side_panel' ] );
+		  $.yote.util.reset_els( [ '.control_table', '.yote_panel' ] );
 		  $.yote.util.init_ui();
 
 		  //url params to get current page
-		  var pagename = 'index.html';
-		  var page = yote_app.hash_fetch( { name : 'pages', key : pagename } );
 		  if( $.yote.is_root() ) {
 		      if( ! page ) {
 			  page = yote_app.hash( { name : 'pages',  key : pagename, value : $.yote.fetch_root().new_root_obj() } );
 		      }
-		      $( '#mainpanel' ).empty().append( $.yote.util.prep_edit( page, 'main_panel' ) );
-		      $.yote.util.implement_edit( page, 'main_panel' );
-		      $( '#side_panel' ).empty().append( $.yote.util.prep_edit( page, 'side_panel' ) );
-		      $.yote.util.implement_edit( page, 'side_panel' );
 		  }
 		  else {
 		      if( !page ) { page = { get : function() { return '' } }; }
-		      $( '#mainpanel' ).empty().append( page.get( 'main_panel' ) || '' );
-		      $( '#side_panel' ).empty().append( page.get( 'side_panel' ) || '' );
 		      $( '#suggestion_box' ).empty().append(
 			      '<TEXTAREA id="suggestion" placeholder="Suggestion Box"></TEXTAREA><BR>' +
 			      '<BUTTON type="BUTTON" id="suggest_b">Send</BUTTON>' +
@@ -115,6 +120,7 @@
 
 
   <body>
+
     <DIV class="header" id="header_div">
       <A href="/index.html" style="display:block">
         <img height="70px" width="151px" src="yotelogo.png">
@@ -123,29 +129,30 @@
       <DIV class="login logged_in" id="logged_in_status"></DIV>
       <DIV id="msg_div"></DIV>
     </DIV>
-    <DIV id="side_panel" class="side_panel">
-    </DIV>
+
+    <DIV id="side_panel" class="side_panel yote_panel" item="$page" field="#side_panel" edit_requires="root"> </DIV>
+
     <DIV class="page_panel">
-      <DIV id="mainpanel" class="mainpanel">
-      </DIV>
-      <DIV class="chatbar">
-	<DIV id="suggestion_box"></div>
-	<DIV class="control_table" id="suggestion_box_admin" is_admin="true" plimit="14" requires_root="true"
-	     item="$box" container_name="suggestions", include_remove="true", column_headers="['Suggestion','Notes']"
-	     columns="['suggestion','*notes']" ></div>
-	</div>
-	<HR>
-        <h3>Chat</h3>
-        <div id="chat_mgs"></div>
-	<div class="control_table" id="chat_box" item="$chat" plimit="15"
-	     container_name="messages" show_count="false" include_remove="*$.yote.is_root()"
-	     columns="[function(item,is_prep){if(is_prep){return item.get_message()+'['+item.get_name()+'] ('+new Date(1000*item.get_created_on()).toLocaleString()+')'}}]"
-	     after_new_function="*function(item){ item.set('created_on',Math.round( new Date().getTime()/1000)) }"
-	     new_button="say" new_attachpoint="#chat_mgs" paginate_order="reverse"
-	     new_columns="['message','name']" new_column_placeholders="['message','name']"
-	     ></div>
-      </DIV>
+      <DIV id="mainpanel" class="mainpanel yote_panel" item="$page" field="#main_panel" edit_requires="root"> </DIV>
+      <DIV id="blogpanel" class="mainpanel control_table" item="$blog" field="#entry" edit_requires="root"> </DIV>
+
+	<DIV class="chatbar">
+	  <DIV id="suggestion_box"></div>
+	  <DIV class="control_table" id="suggestion_box_admin" is_admin="true" plimit="14" requires_root="true"
+	       item="$box" container_name="suggestions", include_remove="true", column_headers="['Suggestion','Notes']"
+	       columns="['suggestion','*notes']" ></div>
+
+          <h3>Chat</h3>
+          <div id="chat_mgs"></div>
+	  <div class="control_table" id="chat_box" item="$chat" plimit="15"
+	       container_name="messages" show_count="false" include_remove="*$.yote.is_root()"
+	       columns="[function(item,is_prep){if(is_prep){return item.get_message()+'['+item.get_name()+'] ('+new Date(1000*item.get_created_on()).toLocaleString()+')'}}]"
+	       after_new_function="*function(item){ item.set('created_on',Math.round( new Date().getTime()/1000)) }"
+	       new_button="say" new_attachpoint="#chat_mgs" paginate_order="reverse"
+	       new_columns="['message','name']" new_column_placeholders="['message','name']"
+	       >
+	  </div>
+	</DIV>
     </DIV>
   </body>
-
 </HTML>
