--- a/MadYote/html/index.html
+++ b/MadYote/html/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <HTML>
   <head>
-    <title></title>
+    <title>Yote Platform</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/yote/js/jquery-latest.js"></script>
     <script src="/yote/js/jquery.cookie.js"></script>
     <script src="/yote/js/jquery.base64.min.js"></script>
