* updated _check_root to just change the handle and password of the existing master account rather than created a new one 	* javascript create_login changed to be called on the app, and also removed defunct register_login method (called from javascript). 	* removed EMAIL and HANDLE cache vars from Yote::YoteRoot. These were buggy, given the threaded nature of Yote. This also revealed a bug in the hash function of mongo db. It was not escaping the periods in the keys properly. 	* added a Yote::SimpleTemplate class with a _fill method 	* added mail configuration options 	* account can be created on mail now 	* added mutexes in YoteRoot. These are just empty yote objects with their _lock and _unlock called at appropriate times. 	* updated tests

--- a/MadYote/html/index.html
+++ b/MadYote/html/index.html
@@ -42,9 +42,9 @@
 	  $().ready(function() {
 
 	      $.yote.init();
+	      var yote_app = $.yote.fetch_app( 'MadYote' );
 
 	      function setup() {
-		  var yote_app = $.yote.fetch_app( 'MadYote' );
 		  var root = $.yote.fetch_root();
 		  var box = yote_app.get_suggestion_box();
 		  var pagename = 'index.html';
@@ -96,6 +96,7 @@
 	      attach_login( {
 		  attachpoint         : '#logged_in_status',
 		  message_attachpoint : '#msg_div',
+		  app                 : yote_app
 		  after_login         : function() {
 		      if( $.yote.is_root() ) {
 			  $( '#suggestion_box' ).hide();
