fixed remove account bug

--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -58,7 +58,7 @@
       }
       .apppanel { margin-left: 150px; }
       .sidenav { float: left; text-align: center; }
-      button.sidenav {     background:none!important;
+      button.sidenav {     background:none!important; cursor:pointer;
      border:none; 
      padding:0!important;
     /*border is optional*/
