--- a/MadYote/html/index.html
+++ b/MadYote/html/index.html
@@ -133,7 +133,9 @@
       <DIV id="msg_div"></DIV>
     </DIV>
 
-    <DIV id="side_panel" class="side_panel yote_panel" item="$page" field="#side_panel" edit_requires="root"> </DIV>
+    <DIV id="side_panel" class="side_panel yote_panel" item="$page"    field="#side_panel" edit_requires="root"> </DIV>
+
+    <DIV id="down_panel" class="side_panel yote_panel" item="$account" field="#log"        edit_requires="login"> </DIV>
 
     <DIV class="page_panel">
       <DIV id="mainpanel" class="mainpanel yote_panel" item="$page" field="#main_panel" edit_requires="root"> </DIV>
