--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -8,7 +8,7 @@
  body { background-color:wheat }
 </style>
 
-<script src="/yote/js/jquery-1.10.1.min.js"></script>
+<script src="/yote/js/jquery-latest.js"></script>
 <script src="/yote/js/jquery.cookie.js"></script>
 <script src="/yote/js/jquery.base64.min.js"></script>
 <script src="/yote/js/json2.js"></script>
