added first and last pagination buttons to testy.html demo page. added hash add and remove test in normal tests

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -67,6 +67,7 @@ function wrap_up() {
     var t2 = d.getTime();
     $.yote.fetch_root().remove_login( { l:$.yote.login_obj, p: 'ut' },
 			 pass( "remove login" ), fail( "remove login" ) );
+    $.yote.logout();
     var d2 = new Date();
     $('#tests').append( "<br>tests completed in " + Math.round(d2.getTime() - t2) + " ms" );
 } //wrap_up
