added container_type method to Yote::Obj

--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -84,19 +84,6 @@ if we are our experiences then we are both sides of them.
 
 	var cron = root.cron();
 
-	var apps = root.wrap_list( { 
-	    collection_name : '_apps',
-	    size            : 3
-	} );
-
-	$.yote.util.register_item( 'apps', apps );
-
-        $.yote.util.register_templates( {
-	    apps  : '<h3>Apps</h3><@ apps name @>',
-	    users : '',
-	    cron  : ''
-	} );
-
 	function register_items() {
             $.yote.util.register_items( {
 		root     : root,
@@ -359,7 +346,25 @@ if we are our experiences then we are both sides of them.
 		$( '#errpanel' ).show();
 		$( '#mainpanel' ).hide();
  	    }
-	}
+	} //check_perms
+
+	var apps;
+	function update_templates() {
+	    if( !apps || !apps.collection_obj ) {
+		apps = root.wrap_list( { collection_name : '_apps', size : 3 } );
+	    }
+	    $.yote.util.register_templates( {
+		Apps : '<H3>Apps</H3><BR>' + 
+		    '<table><tr>' + [ 'Name', 'Host', 'Host URL', 'Number of Users', 'Email Settings', 'Reset' ].map( function(h) { return '<td>' + h + '</td>' } ).join('') + '</tr>' + 
+		    '<@ apps App_row@>' + 
+		    '</table>',
+		App_row : '<tr><td><$ show _ host_name>' //<< EEEK, that's right, it is the hash key that we are after
+	    } );
+	} //update_templates
+	function fill_templates() {
+	    $( '#admin_parts' ).empty().append( $.yote.util.fill_template( "Apps" );
+	    $.yote.util.init_ui();
+	} //fill_templates
     });
     </script>
   </head>
@@ -447,6 +452,10 @@ if we are our experiences then we are both sides of them.
 	</DIV>
 
     </DIV>
+
+    <hr>
+
+    <div id="admin_parts"></div>
 
     <footer>
     </footer>
