--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -332,7 +332,7 @@ $().ready(function(){
 
 	    pag = hello_app.wrap_hash( { collection_name : 'foo_hash', size : 5 } );
 	    pag_hash = pag.to_hash();
-	    pag_keys = pag.keys();
+	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 	    // A B  K L   M    N  O  P  Q  R    S  T  C  U  V    W  X  Y  Z   D E  F G H   I J
 	    // 0 1 10 11 12   13 14 15 16 17   18 19  2 20 21   22 23 24 25   3 4  5 6 7   8 9
@@ -346,7 +346,7 @@ $().ready(function(){
 	    is( pag_hash[ pag_keys[ 4 ] ], "M", "fifth letter" );
 	    pag.forwards();
 	    pag_hash = pag.to_hash();
-	    pag_keys = pag.keys();
+	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 
 	    is( pag_hash[ pag_keys[ 0 ] ], "N", " first after forward" );
@@ -354,7 +354,7 @@ $().ready(function(){
 
 	    pag.seek( 2 );
 	    pag_hash = pag.to_hash();
-	    pag_keys = pag.keys();
+	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 	    console.log( [pag_keys,pag_hash,'after seek'] );
 	    is( pag_hash[ pag_keys[ 0 ] ], "K", "small seek k start" );
@@ -363,7 +363,7 @@ $().ready(function(){
 
 	    pag.seek( 22 );
 	    pag_hash = pag.to_hash();
-	    pag_keys = pag.keys();
+	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 	    console.log( [pag_keys,pag_hash,'after seek'] );
 	    is( pag_hash[ pag_keys[ 0 ] ], "G", "big seek Starting at G" );
@@ -371,7 +371,7 @@ $().ready(function(){
 	    is( pag_keys.length, 4, "keys length after seek" );
 	    pag.last();
 	    pag_hash = pag.to_hash();
-	    pag_keys = pag.keys();
+	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 
 	    console.log( [pag_keys,pag_hash,'after last'] );
@@ -379,14 +379,14 @@ $().ready(function(){
 	    is( pag_hash[ pag_keys[ 0 ] ], "F", "last start with F" );
 	    pag.back();
 	    pag_hash = pag.to_hash();
-	    pag_keys = pag.keys();
+	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 
 	    is( pag_hash[ pag_keys[ 0 ] ], "X", "X is for Rewind first" );
 	    is( pag_hash[ pag_keys[ 4 ] ], "E", "E is for Rewind last" );
 	    pag.first();
 	    pag_hash = pag.to_hash();
-	    pag_keys = pag.keys();
+	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
 
 	    is( pag_hash[ pag_keys[ 0 ] ], "A", "Back to A" );
