for wrap_list pagination, hashkey_search_criteria now takes a space separated string. also button actions exempt takes a list rather than a hash

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -452,7 +452,7 @@ $().ready(function(){
 
 	    // check to see if hash search function works. Search for all 3 keys :
 	    //   13 : N, 23 : X, 3 : D
-	    pag.set_hashkey_search_criteria( [ '3' ] );
+	    pag.set_hashkey_search_criteria( '3' );
 	    pag_hash = pag.to_hash();
 	    pag_keys = Object.keys( pag_hash );
 	    pag_keys.sort();
@@ -525,7 +525,7 @@ $().ready(function(){
 	    // check to see if hash search function works. Search for all 3 keys :
 	    //   13 : N, 23 : X, 3 : D
 
-	    pag.set_hashkey_search_criteria( [ '3' ] );
+	    pag.set_hashkey_search_criteria( '3' );
 	    pag_hash = pag.to_hash();
 	    pag_keys = Object.keys( pag_hash );
 
